inference/vllm/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-service
  labels:
    app: vllm
spec:
  selector:
    app: vllm
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: http
    - name: metrics
      protocol: TCP
      port: 8080
      targetPort: metrics
  type: ClusterIP
