inference/vllm/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: vllm-ingress
  namespace: vllm
spec:
  ingressClassName: nginx
  rules:
  - host: llm.vllm.nkp.cloudnative.nvdlab.net
    http:
      paths:
      - backend:
          service:
            name: vllm-service
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - llm.vllm.nkp.cloudnative.nvdlab.net
    secretName: vllm-tls
